# xp-engine

./: .gitattributes  .gitignore  CMakeLists.txt  MyTemplate.vstemplate  README.md  main.cpp  mainTemplate.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_types.h  vulkanTest.filters  vulkanTest.sln  vulkanTest.vcxproj  vulkanTest.vcxproj.filters
assetcook/: CMakeLists.txt  asset_cook.cpp
assetlib/: CMakeLists.txt  asset_core.cpp  asset_core.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
assets/: apple.mtl  rabbit_low.mtl  rabbit_med.mtl
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  default_lit.frag.spv  greyscale_triangle.frag  greyscale_triangle.frag.spv  textured_lit.frag  textured_lit.frag.spv  tri_mesh.vert  tri_mesh.vert.spv  triangle.frag  triangle.vert
src/: CMakeLists.txt  cvars.cpp  cvars.h  debug.cpp  debug.h  main.cpp  string_utils.h  vk_config.cpp  vk_config.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
src/assetcook/: CMakeLists.txt  asset_cook.cpp
src/assetlib/: core.cpp  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h
